iRedMail-0.9.1:
    * Improvements:
        - Setup Fail2ban to monitor SOGo log file.
        - Add one new Fail2ban filter to help catch spam.

    * Fixed issues:
        - Cannot run PHP scripts under web document root with Nginx.
        - Not use user's identity as envelope sender for 'return receipt'
          responses.
        - Not backup SOGo SQL database.
        - Incorrect path of command 'sogo-tool' on OpenBSD.
        - Not apply service restriction in Dovecot SQL query file while acting
          as SASL server.

    * Updated packages:
        + Roundcube webmail -> 1.1.0
        + uwsgi -> 2.0.9. OpenBSD only.

iRedMail-0.9.0:
    * Works on new distribution releases:
        - RHEL/CentOS 7
        - Ubuntu 14.10 (codename: utopic)
        - OpenBSD 5.6. Note: Nginx is used as web server, the new built-in
          httpd daemon (not Apache-1.3) is not used.

    * SOGo groupware integration:

      SOGo groupware provides a rich AJAX-based Web interface and supports
      multiple native clients through the use of standard protocols such as
      CalDAV, CardDAV and GroupDAV, as well as Microsoft ActiveSync.
      Check its website for more details: http://sogo.nu/

      Important notes of SOGo integration in iRedMail:

      o SOGo integration is available on below Linux distributions and releases:

        - RHEL/CentOS 6. SOGo project doesn't provide RPMs for CentOS 7 yet.
        - Debian 7.
        - Ubuntu 12.04 and 14.04. No official packages for 14.10 yet.
        - OpenBSD 5.6.

      o Full/native Exchange protocol support requires OpenChange and Samba4,
        but they're not integrated in iRedMail, so iRedMail-0.9.0 doesn't
        provide full/native support for Microsoft Outlook clients, Apple
        Mail.app and iOS devices. BlackBerry 10 works fine.

        Check our tutorial to setup your mail clients:
        http://www.iredmail.org/docs/index.html#configure-mail-client-applications
