@@ -1,3 +1,4 @@
 [Definition]
 failregex = (?: pop3-login|imap-login): .*(?:Authentication failure|Aborted login \(auth failed|Aborted login \(tried to use disabled|Disconnected \(auth failed).*rip=(?P<host>\S*),.*
+            Aborted login \(no auth attempts in .* rip=<HOST>
 ignoreregex =
